k8s/base/istio/authorization-policies.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: gateway-to-services
  namespace: dachshaus-services
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["dachshaus-public"]
